Fix width of supporting document toggle so the link doesn't cause change in table column size as it toggles between states (different sentence length) and improve legibility by increasing type size.

--- a/app/assets/stylesheets/admin/editions.scss
+++ b/app/assets/stylesheets/admin/editions.scss
@@ -208,9 +208,12 @@ section.resource_list .collection {
 
         a.toggle {
           float: right;
-          font-size: 10px;
+          @include type-16;
           margin-right: 2.5%;
-          line-height: 3.6em;
+          margin-bottom: 0;
+          line-height: 3.3em;
+          width: 12em;
+          text-align: right;
         }
       }
 
